force-app/main/default/objects/MNFProcessStockIn__c/MNFProcessStockIn__c.object-meta.xml
<CustomObject>
    <label>MNF Process+Stock In</label>
    <nameField>
        <displayFormat>MSI-{000000}</displayFormat>
        <label>MNF Process+Stock In</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MNF Process+Stock In</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>