force-app/main/default/objects/MNFProcessStockIn__c/fields/MNFProcess__c.field-meta.xml
<CustomField>
    <fullName>MNFProcess__c</fullName>
    <label>MNF Process</label>
    <referenceTo>ManufactureProcess__c</referenceTo>
    <relationshipName>Input_MNF_Process</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>