force-app/main/default/objects/MNFProcessStockIn__c/fields/ProductStock__c.field-meta.xml
<CustomField>
    <fullName>ProductStock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (Stock)</label>
    <referenceTo>Product_Stock__c</referenceTo>
    <relationshipName>Input_MNF_Process</relationshipName>
    <type>Lookup</type>
</CustomField>