force-app/main/default/objects/MNFProcessStockIn__c/fields/StockIn__c.field-meta.xml
<CustomField>
    <fullName>StockIn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock In</label>
    <referenceTo>StockInOut__c</referenceTo>
    <relationshipName>Input_MNF_Process</relationshipName>
    <type>Lookup</type>
</CustomField>